Changed the header and purpose.

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Testing Plan Site Plan</h1>
+    <h1>Breakfast Bar Site Plan</h1>
     <h2>Ella Chamberlain</h2>
     <h2>WDD 130-11</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
@@ -20,16 +20,17 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>The purpose for the site is to market the studio and have a place where people can sign up for classes
-        in an easy way. It will let people know what the studio is and how to sign up. This will help build revenue
-        for the company as people pay to rent out the studio for events and classes. 
+    <p>The purpose for this site is to market and share information about the breakfast bar.
+      The breakfast bar is a restaurant that sells trendy, healthy breakfast foods such as 
+      oatmeal and acai bowls. People can see the menu and hours for the restaurant as well as more
+       information about the restaurant. 
     </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>The audience for this website is mostly teenagers and young adults who are interested 
-        in the hip and trendy company and site. The studio is meant to be a place that groups/parties 
-        can rent out rooms to host their own dances or have one of our teachers teach them dances. 
+    <p>The target audience for this website is mainly young people who are wanting a healthy
+      trendy breakfast food that won't break the budget. This restaurant promotes healthy and inexpensive breakfast items
+      and also features a photo op for Instagram lovers. 
     </p>
     <!-- change this -->
 
