--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Breakfast Site Plan</h1>
+    <h1>Site Plan</h1>
     <h2>Ella Chamberlain</h2>
     <h2>WDD 130-11</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
@@ -20,7 +20,7 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>The purpose for this site is to market and share information about the breakfast bar.
+    <p>The purpose for this site is to market and share information about Dry Oar.
       The breakfast bar is a restaurant that sells trendy, healthy breakfast foods such as 
       oatmeal and acai bowls. People can see the menu and hours for the restaurant as well as more
        information about the restaurant. 
@@ -38,7 +38,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="images/logo.jpg" alt="Logo image" />
+    <img src="images/logo.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -49,8 +49,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/473335-7f7caf-e08d79-fcf6bd-d0f4de"
-      target="_blank">https://coolors.co/473335-7f7caf-e08d79-fcf6bd-d0f4de</a>
+    <a href="https://coolors.co/473335-508484-cbbaed-fcf6bd-6e9887"
+      target="_blank">https://coolors.co/473335-508484-cbbaed-fcf6bd-6e9887</a>
 
     <table class="colors">
       <tr>
@@ -61,10 +61,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">#7F7CAF</td>
-        <td class="secondary">#FCF6BD</td>
-        <td class="accent1">#E08D79</td>
-        <td class="accent2">#473335</td>
+        <td class="primary">#fcf6bd</td>
+        <td class="secondary">#473335</td>
+        <td class="accent1">#cb</td>
+        <td class="accent2">#6e9887</td>
       </tr>
     </table>
 
