--- a/breakfast/site-plan.html
+++ b/breakfast/site-plan.html
@@ -130,29 +130,35 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Welcome to the Breakfast Cafe! Here we serve delicious and fresh breakfast items, perfect for any occasion.
+        Our website makes ordering online fast and simple. Just click on the menu button to see all of the delicious
+        breakfast items we have to offer! 
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/front.jpg" alt="image for homepage">
+        <img src="images/frenchtoast.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Menu</h3>
       <p>
-        [Written copy for the Page 2 here]
+        We offer a variety of breakfast items. Some of our most popular items include our french toast, 
+        breakfast sandwiches, and smoothie bowls. Check out our menu down below to see all the items we offer! 
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/granola.jpg" alt="image for page">
+        <img src="images/smoothie.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>About Us</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Tired of the only breakfast restaurant options being greasy fast food or expensive sit down restaurants? The Breakfast Cafe is wanting to fix that that!
+           This new trendy cafe has fast and easy service, clean food, and does not break that bank! The Breakfast Cafe sells an array of different foods such as smoothie bowls, 
+           breakfast sandwiches, crepes, and much more. The Breakfast Cafe also doubles as an Internet Cafe with free wifi, wall plugs, and comfy seating. Our website is a way to see 
+           the menu and order online! Anything you are craving in the morning, The Breakfast Cafe is there to fit your needs.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/oatmeal.jpg" alt="image for page3">
+        <img src="images/granola2.jpg" alt="image for page3">
 
       </ul>
       <hr>
@@ -166,19 +172,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/homepage.png" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/page2.png" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/page3.png" alt="page 3 wireframe">
     </main>
   </body>
 
