--- a/breakfast/site-plan.html
+++ b/breakfast/site-plan.html
@@ -135,8 +135,8 @@
         breakfast items we have to offer! 
       </p>
       <p>Images for the Home page</p>
-        <img src="images/front.jpg" alt="image for homepage">
-        <img src="images/frenchtoast.jpg" alt="image for homepage">
+        <img class= "images" src="images/front.jpg" alt="image for homepage">
+        <img class= "images" src="images/frenchtoast.jpg" alt="image for homepage">
 
       </ul>
       <h3>Menu</h3>
@@ -145,8 +145,8 @@
         breakfast sandwiches, and smoothie bowls. Check out our menu down below to see all the items we offer! 
       </p>
       <p>Images for the Page 2</p>
-        <img src="images/granola.jpg" alt="image for page">
-        <img src="images/smoothie.jpg" alt="image for page">
+        <img class="images" src="images/granola.jpg" alt="image for page">
+        <img class="images" src="images/smoothie.jpg" alt="image for page">
 
       </ul>
       <h3>About Us</h3>
@@ -157,8 +157,8 @@
            the menu and order online! Anything you are craving in the morning, The Breakfast Cafe is there to fit your needs.
       </p>
       <p>Images for the Page 3</p>
-        <img src="images/oatmeal.jpg" alt="image for page3">
-        <img src="images/granola2.jpg" alt="image for page3">
+        <img class="images" src="images/oatmeal.jpg" alt="image for page3">
+        <img class="images" src="images/granola2.jpg" alt="image for page3">
 
       </ul>
       <hr>
