--- a/breakfast/index.html
+++ b/breakfast/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breakfast</title>
     <style>
-        img {
-            width: 60%; 
+        #hero-img {
+            width: 100%; 
         }
     </style>
 </head>
 <body>
+    <div id="content">
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.jpeg" alt="Breakfast Logo">
@@ -28,40 +30,34 @@
         </div>
         <section id="hero-msg">
             <h1 class="home-title">The Breakfast Cafe</h1>
-            <h4>Welcome to the Breakfast Cafe! Here we serve delicious and fresh breakfast items, perfect for any occasion.
-                Our website makes ordering online fast and simple. Just click on the menu button to see all of the delicious
-                breakfast items we have to offer!  </h4>
-            <div class='button-box'>
-                <a class='book' href="rates.html">See Our Menu</a>
-            </div>
         </section>
     </div>
     <main>
+        <div class="home-grid">
+            <div class="menu">
+        <h4>Welcome to the Breakfast Cafe! Here we serve delicious and fresh breakfast items, perfect for any occasion.
+            Our website makes ordering online fast and simple. Just click on the menu button to see all of the delicious
+            breakfast items we have to offer!  </h4>
+            <div class='button-box'>
+                <a class='book' href="page2.html">See Our Menu</a>
+            </div>
+        </div>
         <img class="granola" src="images/granola.jpg" alt="granola">
+    </div>
         <section class="msg">
             <h2>What Are We About?</h2>
             <p>Tired of the only breakfast restaurant options being greasy fast food or expensive sit down restaurants? The Breakfast Cafe is wanting to fix that that!
                 This new trendy cafe has fast and easy service, clean food, and does not break that bank! The Breakfast Cafe sells an array of different foods such as smoothie bowls, 
                 breakfast sandwiches, crepes, and much more. The Breakfast Cafe also doubles as an Internet Cafe with free wifi, wall plugs, and comfy seating. Our website is a way to see 
                 the menu and order online! Anything you are craving in the morning, The Breakfast Cafe is there to fit your needs. </p>
-            <a class='order' href="page3.html">Order Now</a>
+            <a class='book' href="page3.html">Order Now</a>
         </section>
     </main>
     <footer>
         <p>The Breakfast Cafe &copy; 2022 - Ella Chamberlain</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="page3.html">Order Now</a></p>
-        <div class="social">
-            <a href="https://facebook.com">
-                <img src="images/facebook.png" alt="fb icon">
-            </a>
-            <a href="https://twitter.com">
-                <img src="images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.png" alt="instagram icon">
-            </a>
-        </div>
-    </footer>            
+    </footer>  
+    </div>          
 </body>
 </html>
