--- a/breakfast/page3.html
+++ b/breakfast/page3.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breakfast</title>
     <style>
-        img {
-            width: 60%; 
+        #hero-img {
+            width: 100%; 
         }
     </style>
 </head>
 <body>
+    <div id="content">
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.jpeg" alt="Breakfast Logo">
@@ -28,47 +30,61 @@
         </div>
         <section id="hero-msg">
             <h1 class="home-title">Order Online</h1>
-            <h4>Just fill out the form below to order your breakfast. Our storefront is also open Monday-Saturday from 6am-1pm  </h4>
         </section>
     </div>
     <main>
-        <img class="oatmeal" src="images/oatmeal.jpg" alt="oatmeal">
+        <div class="home-grid">
+            <div class="menu">
+        <h4>Fill out the form below to place your mobile order. Check the menu below to see our options.  </h4>
+            <div class='button-box'>
+                <a class='book' href="page2.html">See Our Menu</a>
+            </div>
+        </div>
+        <img class="granola" src="images/oatmeal.jpg" alt="granola">
         <div id="feedback"></div>
         <form action="/my-handling-form-page" method="post">
             <ul>
                 <li>
-                    <label for="name">Name and Phone Number: </label>
+                    <label for="name">Name:</label>
                     <input type="text" id="name" name="user_name"/>
                 </li>
                 <li>
-                    <label for="mail">Time for Pick-up</label>
+                    <label for="mail">E-mail:</label>
                     <input type="email" id="mail" name="user_email">
                 </li>
                 <li>
-                    <label for="msg">Order: </label>
+                    <label for="msg">Message:</label>
                     <textarea id="msg" name="user_message"></textarea>
                 </li>
             </ul>
-            <li class="button">
-                <button type="submit">Pay for Order</button>
-            </li>
+            <ul class="button">
+                <button type="submit">Send your message</button>
+            </ul>
         </form>
+    </div>
     </main>
     <footer>
         <p>The Breakfast Cafe &copy; 2022 - Ella Chamberlain</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="page3.html">Order Now</a></p>
-        <div class="social">
-            <a href="https://facebook.com">
-                <img src="images/facebook.png" alt="fb icon">
-            </a>
-            <a href="https://twitter.com">
-                <img src="images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.png" alt="instagram icon">
-            </a>
-        </div>
-    </footer>            
+    </footer>  
+    </div> 
+    <script>
+        // get the feedback div element so we can do something with it.
+        const feedbackElement = document.getElementById('feedback');
+        // get the form so we can read what was entered in it.
+        const formElement = document.forms[0];
+        // add a 'listener' to wait for a submission of our form. When that happens run the code below.
+        formElement.addEventListener('submit', function(e) {
+            // stop the form from doing the default action.
+            e.preventDefault();
+            // set the contents of our feedback element to a message letting the user know the form was submitted successfully. Notice that we pull the name that was entered in the form to personalize the message!
+            feedbackElement.innerHTML = 'Hello '+ formElement.user_name.value +'! Thank you for your message. We will get back with you as soon as possible!';
+            // make the feedback element visible.
+            feedbackElement.style.display = "block";
+            // add a class to move everything down so our message doesn't cover it.
+            document.body.classList.toggle('moveDown');
+        });
+    </script>         
 </body>
 </html>
